--- a/views/home.hbs
+++ b/views/home.hbs
@@ -23,7 +23,7 @@
 <body>
     <!--Cabecera-->
     <div >
-        <div class="row">
+        <div>
             {{> heder}}
             <!--contenido-->
             <div class="contenido">
