--- a/views/partials/contactos.hbs
+++ b/views/partials/contactos.hbs
@@ -1,5 +1,5 @@
 <div class="contactos">
-  <section class="col-sm-9">
+  <section >
     <ul>
       <li><img src="/imagenes/direccion-de-casa.png" />Dirección<h3>AV. XXX
           XXXX Y XXXXX, QUITO, ECUADOR</h3>
