--- a/views/partials/descripcion.hbs
+++ b/views/partials/descripcion.hbs
@@ -1,9 +1,9 @@
 
-                <div class="descripcion", class="row">
-                    <aside class="col-8 col-sm-6">
+                <div class="descripcion">
+                    <aside >
                         <img src="/imagenes/3.jpg">
                     </aside>
-                    <section class="col-4 col-sm-6">
+                    <section>
                         <h2>Qué es el modelado 3D?</h2>
                         <br><br>
                         <h1>Creativo3D</h1>
