--- a/views/partials/heder.hbs
+++ b/views/partials/heder.hbs
@@ -1,4 +1,4 @@
-<header class="header" class="col-sm-9">
+<header class="header">
                 <!--Banner-->
                 <div class="banner">
                     <h2>"Explora mas sobre nosotros"</h2><br>
