--- a/views/partials/pie.hbs
+++ b/views/partials/pie.hbs
@@ -1,5 +1,5 @@
-  <footer class="col">
+  <footer>
                 <br>
                 Autor: Kevin Armas <br>
-                Belle Vie - Derechos Reservados<br>
+                 Derechos Reservados<br>
      </footer>
