--- a/views/partials/productos.hbs
+++ b/views/partials/productos.hbs
@@ -1,5 +1,5 @@
-<div class="productos" ,class="row">
-  <div class="produc" ,class="col">
+<div class="productos" >
+  <div class="produc" >
     <h2>Cursos</h2><br />
     <h1>Nuestros Cursos</h1><br />
     <p>Inspírate con estas galerías de arte digital e información de nuestros cursos y proyectos.
